Added Wallet Popup Portal & Edited Rgistration Form

--- a/src/Pages/Dashboard.css
+++ b/src/Pages/Dashboard.css
@@ -13,12 +13,9 @@ svg{
 .User-acc {
     text-decoration: none;
   background-color: #222;
-
   border-radius: 5px;
-  border-style: none;
-  box-sizing: border-box;
+  box-sizing: border-box; /* Includes padding and border in the width */
   color: #fff;
-  cursor: pointer;
   display: inline-block;
   font-family: "Farfetch Basis","Helvetica Neue",Arial,sans-serif;
   font-size: 16px;
@@ -31,12 +28,7 @@ svg{
   outline: none;
   overflow: hidden;
   padding: 9px 20px 8px;
-  position: relative;
   text-align: center;
-  text-transform: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
   width: 100%;
 }
 
