--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,72 @@
+/* Connect Walelt Palet */
+.modal{
+    background-color: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    top: 0px;
+    right : 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal-content{
+  background-color: rgba(0, 0, 0);
+  border: 2px solid black;
+  border-radius: 15px;
+  width: 25vw;
+  height: 75vh;
+  padding: 20px;
+  position: relative;
+}
+.close-button{
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  color: #fff;
+  cursor: pointer;
+  position: relative; /* Moves the child relative to its normal position */
+  left: 90%; /* Moves the child 20px to the right */
+  top: 0px; /* Moves the child 10px down */
+}
+.modal-options{
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 5px;
+  border-radius: 10px;
+  border: 2px solid rgb(42, 43, 42);
+  background-color: rgb(60, 63, 60);
+  
+}
+
+.modal-icon{
+  width: 40px;
+  height: 40px;
+}
+.modal-option {
+  background-color: #ffdd57;
+  color: #333;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.modal-option:hover {
+  background-color: #ffcc00;
+  transform: translateY(-2px);
+}
+
+.modal-option:active {
+  transform: translateY(0);
+}
+
+
 /* Navbar Container */
 .navbar {
     display: flex;
@@ -12,6 +81,7 @@
   
   /* Left Side: Branding */
   .navbar-left {
+   
     display: flex;
     align-items: center;
   }
@@ -58,6 +128,7 @@
   }
   
   .navbar-button {
+    /* text-decoration: none; */
     background-color: #ffdd57;
     color: #333;
     border: none;
